...
    await Future.wait(futures);
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('counselorHomeScreen'),
      backgroundColor: const Color.fromARGB(255, 242, 241, 248),
      appBar: AppBar(
        backgroundColor: const Color.fromARGB(255, 242, 241, 248),
        elevation: 0,
        leading: Builder(
          builder: (context) => IconButton(
...
                  );
                },
              ),
            ),
            const SizedBox(width: 16),
            Expanded(
              key: const Key('my_students_card'),
              child: _buildQuickActionCard(
                'Students',
                Icons.people_rounded,
                Colors.purple,
                () {
                  Navigator.pushNamed(context, '/student-history-list');
...
