...
                          Icons.arrow_forward_ios,
                          size: 16,
                          color: Color(0xFF7C83FD),
                        ),
                        const SizedBox(width: 4),
                        Text(
                          'View',
                          style: GoogleFonts.poppins(
                            fontSize: 12,
                            fontWeight: FontWeight.w600,
                            color: const Color(0xFF7C83FD),
                          ),
                        ),
...
